# ReaVer

./: .dockerignore  .gitignore  Dockerfile  README.md  dune-project  reaver.opam  reaver.opam.template
accelJordan/: apronaux.ml  apronaux.mli  arg2.ml  arg2.mli  auto.ml  auto.mli  bound.mli  counting.ml  counting.mli  derivative.ml  derivative.mli  jordan.ml  jordan.mli  lexer.mli  main.ml  matrix.ml  matrix.mli  option.ml  syntax.ml  template.ml  template.mli  trans.ml  trans.mli
examples/: alternation_prec.nbac  alternation_prec.nbac.dot  alternation_subspec.nbac  alternation_subspec.nbac.dot  complex_hyper.nbac  complex_hyper.nbac.dot  complex_hyper2.nbac  complex_hyper2.nbac.dot  csp2015.nbac  csp2015.nbac.dot  hyper_period.nbac  hyperperiod.nbac.dot  jitter.nbac  jitter.nbac.dot  mg_safe_inter.nbac  mg_safe_inter.nbac.dot  mg_safe_union.nbac  mg_safe_union.nbac.dot  mutex_2tasks_latency.nbac  prec_more.nbac  prec_more.nbac.dot  prec_trans.nbac  prec_trans.nbac.dot  prec_trans_counters.nbac  prec_trans_counters.nbac.dot
lib/: dune
lib/analysis/: accel.ml  accel.mli  analysisStd.ml  analysisStd.mli  fixpointAcc.ml  fixpointAcc.mli  stratiter.ml  stratiter.mli  stratiter2.ml  stratiter2.mli  stratiter3.ml  stratiter3.mli  templateCmp.ml  templateCmp.mli
lib/apron/: apronAccel.ml  apronHybrid.ml  apronUtil.ml
lib/base/: analysis.ml  analysis.mli  arc.ml  arc.mli  cfg.mli  domain.ml  env.ml  loc.ml  loc.mli  program.ml  program.mli  verifUtil.ml  verifUtil.mli
lib/bddapron/: bddapronAccel.ml  bddapronAnalysis.ml
lib/util/: log.ml  (+5 more)
phd_examples/: ex10.4.ml
(+34 files in other folders)
